# vnoicup-2025-r1-d-visualizer

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: bruteforce.rs  logic.rs  main.rs  sub3.rs
src/logic/: board.rs  cell.rs  solver.rs
